Adding basic CSRF protection.
fixed #46

--- a/client/src/app/logout/logout.component.html
+++ b/client/src/app/logout/logout.component.html
@@ -5,3 +5,6 @@
     role="status"
   ></div>
 </div>
+<div *ngIf="showHelper" class="text-center" style="margin-top: 50px;">
+  <a href="/">Click here to refresh the page if it is taking too long.</a>
+</div>
