--- a/client/src/app/welcome/welcome.component.html
+++ b/client/src/app/welcome/welcome.component.html
@@ -36,8 +36,8 @@
 </div>
 
 <div *ngIf="serverError" class="alert alert-danger">
-  Something seems to have gone wrong. We're working on it. Try refreshing your
-  browser.
+  Something seems to have gone wrong. We're working on it. Try
+  <a href="/">refreshing the page</a>.
 </div>
 
 <ng-template #state>
